# si4-low-cost-sftp

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  REPORT.md  sonar-project.properties
.github/workflows/: build.yml
client/: CMakeLists.txt  main.cpp
client/client/: Client.cpp  Client.h
common/: CMakeLists.txt
common/Args/: Arguments.cpp  Arguments.h
common/Command/: Command.cpp  Command.h  CommandEnum.h
common/Response/: Response.cpp  Response.h  ResponseEnum.h
common/SocketCommunication/: SocketCommunication.cpp  SocketCommunication.h
external-libs/AES/: CMakeLists.txt
external-libs/CLI11/: CMakeLists.txt
external-libs/OpenSSL/: CMakeLists.txt  OpenSSL.cpp  OpenSSL.h  OpenSSL_AES.cpp  OpenSSL_AES.h  OpenSSL_RSA.cpp  OpenSSL_Utils.cpp  OpenSSL_Utils.h
external-libs/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
external-libs/catch/: CMakeLists.txt
external-libs/libserver/: CMakeLists.txt  libserver.h
libclient/: CMakeLists.txt
peer-server/: CMakeLists.txt  main.cpp
peer-server/PeerServer/: PeerServer.cpp  PeerServer.h
peer-server/SessionStorage/: SessionStorage.cpp  SessionStorage.h
server/: CMakeLists.txt  main.cpp
server/errors/: PublicServerRuntimeError.cpp  PublicServerRuntimeError.h  ServerError.h
server/server/: PeerServer.cpp  PeerServer.h  Server.cpp  Server.h  SessionStorage.cpp  SessionStorage.h
src/client/: main.cpp
src/client/client/: Client.cpp  Client.h  client.cpp  client.h
src/common/: server.h
src/common/AES/: AES.h
src/common/OpenSSL/: OpenSSL.cpp
src/common/SocketCommunication/: SocketCommunication.cpp  SocketCommunication.h
src/common/base64/: base64.cpp
src/server/: main.cpp
src/server/server/: Server.cpp  Server.h
tests/: CMakeLists.txt  hello_test.cpp  test_crypt.cpp  test_crypt_aes.cpp  test_crypt_rsa.cpp  test_thread_pool.cpp  test_utils.cpp
tests/common/Args/: test_arguments.cpp
tests/common/Command/: test_commands.cpp
tests/common/Response/: test_response.cpp
